--- a/styles/style.scss
+++ b/styles/style.scss
@@ -146,10 +146,6 @@ body {
 
 //////////////////oncube stuff
 
-.highlight {
-  color: #d63333;
-}
-
 .about-wrapper {
   position: relative;
   height: 100%;
@@ -157,10 +153,9 @@ body {
   display: flex;
 
   img {
-    z-index: -1;
-    height: 100%;
     position: absolute;
-    transform: translateX(-45%);
+    height: 100%;
+    z-index: -1;
   }
   .about-info {
     width: 450px;
@@ -173,19 +168,21 @@ body {
     h2 {
       font-size: 2rem;
       letter-spacing: 10px;
+      transform: translate(0rem, 2rem);
     }
     h1 {
       font-family: "CeraLight";
       font-size: 3.8rem;
       letter-spacing: 5px;
-      color: #dd961c;
-      transform: translate(0rem, -2rem);
+      color: #dd791c;
     }
     p {
       font-size: 1.4rem;
     }
   }
 }
+
+///////////////////project-swiper/////////////
 .project-intro {
   height: 100%;
   width: 100%;
@@ -205,9 +202,14 @@ body {
   .project-intro-pic {
     height: 100%;
     width: 50%;
-    background-image: url(../images/project-intro.JPG);
+    background-image: url(../images/project-intro.png);
     background-size: cover;
   }
+}
+.website-info {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .moebel-1 {
@@ -379,6 +381,40 @@ body {
     height: calc(700px - 60px);
     width: calc(550px - 60px);
   }
+  .about-info {
+    width: 100%;
+    height: 100%;
+    transform: translateX(0px) !important;
+    padding: 2rem !important;
+    h2 {
+      font-size: 1.4rem;
+    }
+  }
+  .project-intro {
+    overflow: hidden;
+    position: relative;
+    .project-intro-pic {
+      z-index: -1;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+    .project-intro-info {
+      padding: 3rem;
+      width: 100%;
+      height: 100%;
+      background-color: #151515c5;
+    }
+  }
+  .form-wrapper {
+    .form-over {
+      left: 0;
+      width: 80%;
+    }
+    .form-under {
+      display: none;
+    }
+  }
   .swiper-pagination,
   .social-links {
     display: none;
@@ -387,7 +423,7 @@ body {
 @media (max-width: 576px) {
   #cube {
     height: 600px;
-    width: 440px;
+    width: 400px;
     left: 50%;
   }
   .logo {
@@ -395,8 +431,28 @@ body {
   }
   .bg-inside {
     height: calc(600px - 50px);
-    width: calc(440px - 50px);
+    width: calc(400px - 50px);
   }
+  .swiper-pagination,
+  .social-links {
+    display: none;
+  }
+}
+
+@media (max-width: 410px) {
+  #cube {
+    height: 580px;
+    width: 340px;
+    left: 50%;
+  }
+  .logo {
+    width: 80%;
+  }
+  .bg-inside {
+    height: calc(580px - 40px);
+    width: calc(340px - 40px);
+  }
+
   .swiper-pagination,
   .social-links {
     display: none;
