--- a/styles/style.scss
+++ b/styles/style.scss
@@ -124,6 +124,8 @@ body {
 }
 .bg-color {
   background-color: #f3a41d;
+
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
 }
 
 .swiper-button-next,
@@ -136,7 +138,12 @@ body {
   // border: 1px solid #f1f1f1c4;
   border-radius: 30px;
 }
-
+.swiper-button-next {
+  right: -60px;
+}
+.swiper-button-prev {
+  left: -60px;
+}
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
   transition: 0.5s;
@@ -212,17 +219,36 @@ body {
   flex-direction: column;
 }
 
-.moebel-1 {
-  background-image: url(../images/projects/img1.jpg);
-  background-size: cover;
-}
-.moebel-2 {
-  background-image: url(../images/projects/img2.jpg);
-  background-size: cover;
-}
-.moebel-3 {
-  background-image: url(../images/projects/img3.jpg);
-  background-size: cover;
+.grid-wrapper {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 5px;
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .main-grid {
+    grid-column: 1/4;
+    grid-row: 1/5;
+  }
+  .second-grid {
+    grid-column: 4/6;
+    grid-row: 1/3;
+  }
+  .third-grid {
+    grid-column: 4/6;
+    grid-row: 3/5;
+  }
+  .info {
+    background-color: #1f1f1f;
+    padding: 20px;
+  }
 }
 
 ///////////////////form/////////////
@@ -369,6 +395,9 @@ body {
   }
 }
 @media (max-width: 768px) {
+  html {
+    font-size: 12px;
+  }
   #cube {
     height: 700px;
     width: 550px;
@@ -388,6 +417,8 @@ body {
     padding: 2rem !important;
     h2 {
       font-size: 1.4rem;
+      letter-spacing: 4px !important;
+      line-height: 2rem;
     }
   }
   .project-intro {
@@ -406,6 +437,25 @@ body {
       background-color: #151515c5;
     }
   }
+
+  .grid-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+
+    .main-grid {
+      grid-column: 1/3;
+      grid-row: 1/4;
+    }
+    .second-grid {
+      grid-column: 1/2;
+      grid-row: 4/6;
+    }
+    .third-grid {
+      grid-column: 2/3;
+      grid-row: 4/6;
+    }
+  }
+
   .form-wrapper {
     .form-over {
       left: 0;
@@ -433,6 +483,15 @@ body {
     height: calc(600px - 50px);
     width: calc(400px - 50px);
   }
+  .info {
+    padding: 10px !important;
+    h5 {
+      line-height: 1rem;
+    }
+    p {
+      font-size: 1rem;
+    }
+  }
   .swiper-pagination,
   .social-links {
     display: none;
@@ -442,7 +501,7 @@ body {
 @media (max-width: 410px) {
   #cube {
     height: 580px;
-    width: 340px;
+    width: 280px;
     left: 50%;
   }
   .logo {
@@ -450,7 +509,7 @@ body {
   }
   .bg-inside {
     height: calc(580px - 40px);
-    width: calc(340px - 40px);
+    width: calc(280px - 40px);
   }
 
   .swiper-pagination,
