--- a/styles/style.css
+++ b/styles/style.css
@@ -237,7 +237,11 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
+}
+
+.project-intro .project-intro-info i {
+  color: #a5a5a5;
 }
 
 .project-intro .project-intro-pic {
@@ -305,8 +309,7 @@ body {
 }
 
 .grid-wrapper .info {
-  background-color: #1f1f1f;
-  padding: 20px;
+  padding: 40px;
 }
 
 .form-wrapper {
