--- a/styles/style.scss
+++ b/styles/style.scss
@@ -169,9 +169,9 @@ body {
     margin: auto;
     align-self: center;
     transform: translateX(20%);
-    background-color: #151515a4;
+    background-color: #151515b6;
     padding: 3rem;
-    border-radius: 2rem;
+
     h2 {
       font-size: 2rem;
       letter-spacing: 10px;
@@ -417,11 +417,16 @@ body {
     width: 100%;
     height: 100%;
     transform: translateX(0px) !important;
-    padding: 2rem !important;
+
+    padding: 0 2rem 0 2rem !important;
     h2 {
-      font-size: 1.4rem;
+      font-size: 1.4rem !important;
       letter-spacing: 4px !important;
-      line-height: 2rem;
+      line-height: 2.6rem;
+      color: #c5c5c5;
+    }
+    p {
+      font-size: 1.3rem !important;
     }
   }
   .project-intro {
@@ -456,6 +461,12 @@ body {
     .third-grid {
       grid-column: 2/3;
       grid-row: 4/6;
+    }
+    .info {
+      padding: 0 10px 0 10px !important;
+      p {
+        font-size: 0.8rem;
+      }
     }
   }
 
