--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,10 @@
   font-family: "CeraMedium";
   src: url("../fonts/CeraMedium.otf") format("opentype");
 }
-
 @font-face {
   font-family: "CeraLight";
   src: url("../fonts/CeraLight.otf") format("opentype");
 }
-
 html,
 body {
   position: relative;
@@ -33,14 +31,18 @@ body {
 #bg-left {
   left: 0;
   width: 40%;
-  background: -webkit-gradient(linear, left bottom, left top, from(#0a0a0a), color-stop(20%, #161616));
-  background: linear-gradient(0deg, #0a0a0a 0%, #161616 20%);
+  --s: 50px;
+  --c: #161616;
+  --_s: calc(2*var(--s)) calc(2*var(--s));
+  --_g: 35.36% 35.36% at;
+  --_c: #0000 66%, #20222a 68% 70%, #0000 72%;
+  background: radial-gradient(var(--_g) 100% 25%, var(--_c)) var(--s) var(--s)/var(--_s), radial-gradient(var(--_g) 0 75%, var(--_c)) var(--s) var(--s)/var(--_s), radial-gradient(var(--_g) 100% 25%, var(--_c)) 0 0/var(--_s), radial-gradient(var(--_g) 0 75%, var(--_c)) 0 0/var(--_s), repeating-conic-gradient(var(--c) 0 25%, rgba(0, 0, 0, 0) 0 50%) 0 0/var(--_s), radial-gradient(var(--_c)) 0 calc(var(--s) / 2)/var(--s) var(--s) var(--c);
+  background-attachment: fixed;
 }
 
 #bg-right {
   right: 0;
   width: 67%;
-  background: -webkit-gradient(linear, left bottom, left top, from(#2f2004), color-stop(20%, #d48f18));
   background: linear-gradient(0deg, #2f2004 0%, #d48f18 20%);
 }
 
@@ -48,8 +50,7 @@ body {
   position: absolute;
   top: 50%;
   left: 58%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 1300px;
   height: 800px;
 }
@@ -58,24 +59,22 @@ body {
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
+  -webkit-justify-content: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
+  -webkit-align-items: center;
   align-items: center;
 }
 
 .swiper-pagination {
   top: 15%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .swiper-pagination-bullet {
@@ -84,17 +83,16 @@ body {
   text-align: right;
   line-height: 50px;
   font-size: 1.7rem;
-  color: white;
+  color: rgb(255, 255, 255);
   opacity: 1;
   background: none;
   border-radius: 10px;
   margin-bottom: 2rem;
 }
 
-.swiper-pagination-vertical.swiper-pagination-bullets, .swiper-vertical > .swiper-pagination-bullets {
+.swiper-pagination-vertical.swiper-pagination-bullets,
+.swiper-vertical > .swiper-pagination-bullets {
   left: 40px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -111,15 +109,9 @@ body {
   z-index: -1;
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .bg-inside {
@@ -129,15 +121,9 @@ body {
   width: calc(1300px - 80px);
   background-color: #151515;
   color: #f1f1f1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .bg-color {
@@ -149,7 +135,7 @@ body {
   height: 40px;
   width: 30px;
   top: 50%;
-  color: #e6e6e6b4;
+  color: rgba(230, 230, 230, 0.7058823529);
   padding: 12px;
   border-radius: 30px;
 }
@@ -164,9 +150,8 @@ body {
 
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
-  background-color: #f1f1f1b7;
+  background-color: rgba(241, 241, 241, 0.7176470588);
   color: #0a0a0a;
 }
 
@@ -174,43 +159,32 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .about-wrapper img {
   position: absolute;
   height: 100%;
   z-index: -1;
 }
-
 .about-wrapper .about-info {
   width: 450px;
   margin: auto;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  -webkit-transform: translateX(20%);
-          transform: translateX(20%);
-  background-color: #151515b6;
+  align-self: center;
+  transform: translateX(20%);
+  background-color: rgba(21, 21, 21, 0.7137254902);
   padding: 3rem;
 }
-
 .about-wrapper .about-info h2 {
   font-size: 2rem;
   letter-spacing: 10px;
-  -webkit-transform: translate(0rem, 2rem);
-          transform: translate(0rem, 2rem);
+  transform: translate(0rem, 2rem);
 }
-
 .about-wrapper .about-info h1 {
   font-family: "CeraMedium";
   font-size: 3.8rem;
   letter-spacing: 5px;
   color: #dd791c;
 }
-
 .about-wrapper .about-info p {
   font-size: 1.1rem;
   line-height: 1.3rem;
@@ -219,101 +193,83 @@ body {
 .project-intro {
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
-
 .project-intro .project-intro-info {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   width: 50%;
   padding: 4rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   font-size: 1.1rem;
 }
-
-.project-intro .project-intro-info i {
-  color: #a5a5a5;
+.project-intro .project-intro-info .underline-arrow {
+  padding-block: 0.25rem;
+  border-bottom: 1px solid #d6d6d6;
+  width: fit-content;
+  position: relative;
 }
-
+.project-intro .project-intro-info .underline-arrow::after {
+  content: "";
+  position: absolute;
+  bottom: -7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+.project-intro .project-intro-info .underline-arrow--left::after {
+  left: 0;
+  border-width: 0 30px 6px 0;
+  border-color: transparent #d6d6d6 transparent transparent;
+}
+.project-intro .project-intro-info .underline-arrow--right::after {
+  right: 0;
+  border-width: 6px 30px 0 0;
+  border-color: #d6d6d6 transparent transparent transparent;
+}
+.project-intro .project-intro-info .swipe-right {
+  border-bottom: red;
+}
 .project-intro .project-intro-pic {
   height: 100%;
   width: 50%;
-  background-image: url(../images/project-intro.png);
+  background-image: url(https://iili.io/JnHvgGs.md.png);
   background-size: cover;
 }
 
 .website-info {
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .grid-wrapper {
   height: 100%;
   width: 100%;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[5];
-      grid-template-columns: repeat(5, 1fr);
-  -ms-grid-rows: (1fr)[4];
-      grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 5px;
 }
-
 .grid-wrapper img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
-
 .grid-wrapper .main-grid {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
   grid-column: 1/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 4;
   grid-row: 1/5;
 }
-
 .grid-wrapper .second-grid {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 2;
   grid-column: 4/6;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
   grid-row: 1/3;
 }
-
 .grid-wrapper .third-grid {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 2;
   grid-column: 4/6;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 2;
   grid-row: 3/5;
 }
-
 .grid-wrapper .info {
   padding: 40px;
 }
@@ -322,12 +278,9 @@ body {
   position: relative;
   width: 80%;
   height: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   background-color: #161616;
 }
-
 .form-wrapper .form-over {
   z-index: 2;
   position: absolute;
@@ -337,24 +290,15 @@ body {
   bottom: 0;
   background-color: #1b1b1b;
   border: 1px solid #f4f4f4;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   padding: 1.5rem;
   font-size: 1.2rem;
 }
-
 .form-wrapper .form-over label {
   padding: 1rem;
 }
-
 .form-wrapper .form-over input,
 .form-wrapper .form-over textarea {
   margin: 0.5rem;
@@ -364,44 +308,19 @@ body {
   border-top: 1px #262626 solid;
   color: #f1f1f1;
 }
-
 .form-wrapper .form-over input:focus,
 .form-wrapper .form-over textarea:focus {
   border: none;
 }
-
-.form-wrapper .form-over input::-webkit-input-placeholder,
-.form-wrapper .form-over textarea::-webkit-input-placeholder {
-  color: #a5a5a5;
-  padding: 0.5rem;
-  font-family: monospace;
-}
-
-.form-wrapper .form-over input:-ms-input-placeholder,
-.form-wrapper .form-over textarea:-ms-input-placeholder {
-  color: #a5a5a5;
-  padding: 0.5rem;
-  font-family: monospace;
-}
-
-.form-wrapper .form-over input::-ms-input-placeholder,
-.form-wrapper .form-over textarea::-ms-input-placeholder {
-  color: #a5a5a5;
-  padding: 0.5rem;
-  font-family: monospace;
-}
-
 .form-wrapper .form-over input::placeholder,
 .form-wrapper .form-over textarea::placeholder {
   color: #a5a5a5;
   padding: 0.5rem;
   font-family: monospace;
 }
-
 .form-wrapper .form-over input {
   line-height: 2rem;
 }
-
 .form-wrapper .form-over #send-btn {
   margin-top: 1rem;
   border: none;
@@ -409,27 +328,18 @@ body {
   border-radius: 4px;
   cursor: pointer;
 }
-
 .form-wrapper .form-under {
   z-index: 1;
   width: 100%;
   height: 80%;
-  -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   border: 1px solid #f4f4f4;
   background-color: #262626;
   color: #f1f1f1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  align-items: center;
+  justify-content: flex-end;
 }
-
 .form-wrapper .form-under h2 {
   font-weight: 200;
   padding-right: 3rem;
@@ -444,21 +354,17 @@ body {
   display: block;
   padding: 1rem;
 }
-
 .social-links a {
   display: block;
   text-align: right;
 }
-
 .social-links a .fa {
-  color: #e6e6e69a;
+  color: rgba(230, 230, 230, 0.6039215686);
   font-size: 2.5rem;
   padding: 0.5rem;
 }
-
 .social-links a .fa:hover {
   color: #f1f1f1;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -468,11 +374,10 @@ body {
     width: 1100px;
   }
   .bg-inside {
-    height: calc(700px - 80px);
-    width: calc(1100px - 80px);
+    height: 620px;
+    width: 1020px;
   }
 }
-
 @media (max-width: 1400px) {
   html {
     font-size: 14px;
@@ -483,15 +388,14 @@ body {
     left: 50%;
   }
   .bg-inside {
-    height: calc(700px - 80px);
-    width: calc(950px - 80px);
+    height: 620px;
+    width: 870px;
   }
   .swiper-pagination,
   .social-links {
     display: none;
   }
 }
-
 @media (max-width: 992px) {
   #cube {
     height: 700px;
@@ -499,15 +403,14 @@ body {
     left: 50%;
   }
   .bg-inside {
-    height: calc(700px - 80px);
-    width: calc(750px - 80px);
+    height: 620px;
+    width: 670px;
   }
   .swiper-pagination,
   .social-links {
     display: none;
   }
 }
-
 @media (max-width: 768px) {
   html {
     font-size: 12px;
@@ -521,14 +424,13 @@ body {
     width: 80%;
   }
   .bg-inside {
-    height: calc(700px - 60px);
-    width: calc(550px - 60px);
+    height: 640px;
+    width: 490px;
   }
   .about-info {
     width: 100%;
     height: 100%;
-    -webkit-transform: translateX(0px) !important;
-            transform: translateX(0px) !important;
+    transform: translateX(0px) !important;
     padding: 0 2rem 0 2rem !important;
   }
   .about-info h2 {
@@ -554,36 +456,22 @@ body {
     padding: 3rem;
     width: 100%;
     height: 100%;
-    background-color: #151515c5;
+    background-color: rgba(21, 21, 21, 0.7725490196);
   }
   .grid-wrapper {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[5];
-        grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
   }
   .grid-wrapper .main-grid {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
     grid-column: 1/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 3;
     grid-row: 1/4;
   }
   .grid-wrapper .second-grid {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
     grid-column: 1/2;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 2;
     grid-row: 4/6;
   }
   .grid-wrapper .third-grid {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
     grid-column: 2/3;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 2;
     grid-row: 4/6;
   }
   .grid-wrapper .info {
@@ -604,7 +492,6 @@ body {
     display: none;
   }
 }
-
 @media (max-width: 576px) {
   #cube {
     height: 600px;
@@ -615,8 +502,8 @@ body {
     width: 80%;
   }
   .bg-inside {
-    height: calc(600px - 50px);
-    width: calc(400px - 50px);
+    height: 550px;
+    width: 350px;
   }
   .info {
     padding: 10px !important;
@@ -632,7 +519,6 @@ body {
     display: none;
   }
 }
-
 @media (max-width: 410px) {
   #cube {
     height: 580px;
@@ -643,12 +529,13 @@ body {
     width: 80%;
   }
   .bg-inside {
-    height: calc(580px - 40px);
-    width: calc(280px - 40px);
+    height: 540px;
+    width: 240px;
   }
   .swiper-pagination,
   .social-links {
     display: none;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
